# lab06-checkpoint

./: Makefile  cabal.project  lab06-checkpoint.cabal
app/: Main.hs
app.wasmexe/: ghc_wasm_jsffi.js  index.js  lab06-checkpoint.wasm
