cabal-version: 2.2
name: lab06-checker
version: 0.1.0.0
synopsis: Sample miso app
category: Web

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

common warnings
    ghc-options: -Wall

executable lab06-checkpoint
  import:
    wasm,
    warnings
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
    base, miso, text
  default-language:
    Haskell2010
